--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -61,7 +61,7 @@
             <span class="hello-msg" >Hello, {{request.user}}</span>
             &nbsp
             <form class="search-bar justify-content-start" onsubmit="return executeQuery();">
-                <input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search...">
+                <input type="text" class="form-control" name="q" id="id_q_small" placeholder="Search...">
             </form>
             &nbsp
             <a class="btn btn-outline-primary" href="{% url 'addPost' %}">Add post</a>
