--- a/posts/templates/posts/search_results.html
+++ b/posts/templates/posts/search_results.html
@@ -1,115 +1,78 @@
-<!-- This is basically exactly the same as friend_list.html -->
+{% extends "base.html"%}
+{% block content%}
 
-{% extends 'base.html' %}
-{% load static %}
+<body style="margin:0;padding:0; background:#f8f9fa !important;">
 
-{% block content %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-3" style="padding: 2%">
+            <br>
+            <h4><b>Otaku Hub</b></h4>
+            <p>172.16.120.34</p>
+            <p>Moderators - DriftKing009,tharun</p>
 
+            <br>
+            <h4><b>The_LoudSpeaker's Hub</b></h4>
+            <p>172.16.34.21</p>
+            <p>Moderator - Raman Sarda</p>
 
-<style type="text/css">
-	.profile-image{
-		max-height: 100px;
-		max-width: 100px;
-	}
-	.profile-image{
-		border-radius: 12px;
-	}
-	.card{
-		border-radius: 12px;
-	}
-	.friends-text{
-		color: #000;
-		font-weight: 500;
-	}
-	.friends-text-container{
-		border: 1px solid #cccccc;
-		border-radius: 12px;
-	}
-	.friends-btn:hover {
-		background-color: #bfbfbf;
-		border-color: #bfbfbf;
-	}
-	.dropdown-toggle::after {
-		content: none;
-	}
-	.profile-link{
-		color: #000;
-	}
-	.checkmark-icon{
-		color: green;
-	}
-	.cancel-icon{
-		color: red;
-	}
-</style>
+            <br><br>
+            <h3><b>Instructions</b></h3>
+            <p>Download DC++. <br> Press File -> Quick Connect -> 172.16.120.34 to join OtakuHub.<br>
+            Go to File->Settings-> Connectivity->Remove the tick if present->Press OK.<br>
+            Use File->Sharing to share the files on your computer.<br></p>
 
-<div class="container">
-	<div class="card p-2">
+            <br>
 
-		{% if showPost %}
-            <div class="d-flex flex-row flex-wrap">
-                {% for account in accounts %}
-                <div class="card flex-row flex-grow-1 p-1 mx-2 my-2 align-items-center">
-                    <a class="profile-link" href="{% url 'account:view' user_id=account.0.id %}">
-                        <div class="card-image m-2">
-                            <img class="img-fluid profile-image" src="{{account.0.profile_image.url}}" alt="">
-                        </div>
-                    </a>
-                    <a class="profile-link" href="{% url 'account:view' user_id=account.0.id %}">
-                        <div class="card-center px-2">
-                            <h4 class="card-title">{{account.0.username}}</h4>
-                            {% if account.1 %}
-                            <p class="card-text"><a href="#" onclick="createOrReturnPrivateChat('{{account.0.id}}')">Send a Message</a></p>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-8">
+
+            <style type="text/css">
+                .homeDiv
+                {
+                background:#fff;
+                    border: 1px solid rgba(0, 0, 0, .1);
+                    border-radius: 8px;
+                    box-shadow: 0 8px 16px rgba(0, 0, 0, .1);
+                 font-size:20px;
+                }
+            </style>
+
+            {% if showPost %}
+                {% for i in showPost %}
+                &nbsp
+                Posted by {{ i.img }} - {{ i.date_posted }}
+                <div class="homeDiv" style="padding:2%">
+                    <div class="row">
+                        <div class="col-7">
+                            <b>{{ i.title }}</b>
+                            <br> <br>
+                            <span style="color:#495057"> {{i.description }}</span>
+
+                            {% if request.user.is_admin %}
+                                <br><br>
+                                <button class="btn btn-danger"> <a href="{% url 'delPost' id=i.id %}" style="color:white;text-decoration:none"> Delete </a>
+                                </button>
                             {% endif %}
-
                         </div>
-                    </a>
-                    <div class="d-flex flex-row card-right flex-grow-1 justify-content-end mx-2">
-                        {% if account.1 %}
-                            <div class="d-flex flex-row friends-text-container p-3">
-                                <p class="friends-text m-auto">
-                                    Friends
-                                </p>
-                                <span class="material-icons checkmark-icon m-auto pl-2">
-                                check_circle_outline
-                                </span>
-                            </div>
-                        {% else %}
-                            {% if account.0 !=  request.user %}
-                                <div class="d-flex flex-row friends-text-container p-3">
-                                    <p class="friends-text m-auto">
-                                        Not Friends
-                                    </p>
-                                    <span class="material-icons cancel-icon m-auto pl-2">cancel</span>
-                                </div>
-                            {% endif %}
-                        {% endif %}
-                        {% if account.0 == request.user %}
-                            <div class="d-flex flex-row friends-text-container p-3">
-                                <p class="friends-text m-auto">
-                                    This is you
-                                </p>
-                                <span class="material-icons m-auto pl-2">
-                                person_pin
-                                </span>
-                            </div>
-                        {% endif %}
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:2 %}
-                </div><div class="d-flex flex-row flex-wrap">
-                {% endif %}
-
+                <br>
                 {% endfor %}
 
-		{% else %} <!-- If no friends -->
-		<div class="d-flex flex-row flex-grow-1 justify-content-center align-items-center p-4">
-			<p>No results</p>
-		</div>
-		{% endif %}
-		</div>
-	</div>
+            {% else %}
+                <div class="homeDiv" style="padding:2%">
+                    <div class="row">
+                        <div class="col-7">
+                            <p>No Results found</p>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
 
+        </div>
+    </div>
 </div>
-
-{% endblock content %}
+</body>
+{% endblock%}
